# bevy_mod_wanderlust

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  test.bat
.github/workflows/: main.yml
assets/blend files/: starship.blend  starship2.blend  starship3.blend  starship4.blend
assets/gltf/: starship.glb  starship3.glb
examples/: first_person.rs  platformer_2d.rs  playground.rs  simple.rs  starship.rs  starship_2d.rs
src/: bundles.rs  cap.rs  components.rs  lib.rs  physics.rs  plugins.rs  presets.rs  rapier.rs  resources.rs  spring.rs  systems.rs
src/backend/: mod.rs  query.rs  rapier.rs
src/backend/rapier/: bundle.rs  mass.rs  mod.rs  plugin.rs  query.rs  velocity.rs
src/backend/xpbd/: mass.rs  mod.rs  velocity.rs
src/backends/: mod.rs  rapier2d.rs  rapier3d.rs
src/components/: input.rs  settings.rs  state.rs
src/controller/: gravity.rs  ground.rs  input.rs  mod.rs  movement.rs  orientation.rs  parts.rs
