[package]
authors = ["PROMETHIA-27"]
categories = ["game-development"]
description = "A character controller library for Bevy Engine"
documentation = "https://docs.rs/bevy_mod_wanderlust/*/bevy_mod_wanderlust/"
edition = "2021"
homepage = "https://crates.io/crates/bevy_mod_wanderlust"
keywords = ["Bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_mod_wanderlust"
readme = "README.md"
repository = "https://github.com/PROMETHIA-27/bevy_mod_wanderlust"
version = "0.4.0"

[features]
default = ["rapier"]
debug_lines = []
rapier = ["bevy_rapier3d"]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_render",
    "bevy_gizmos",
] }
bevy_rapier3d = { version = "0.22", default-features = false, features = [
    "async-collider",
    "dim3",
], optional = true }

[dev-dependencies]
bevy = "0.11"
aether_spyglass = "0.2"
bevy_rapier3d = { version = "0.22", features = ["debug-render"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
