[package]
authors = ["PROMETHIA-27"]
categories = ["game-development"]
description = "A character controller library for Bevy Engine"
documentation = "https://docs.rs/bevy_mod_wanderlust/*/bevy_mod_wanderlust/"
edition = "2021"
homepage = "https://crates.io/crates/bevy_mod_wanderlust"
keywords = ["Bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_mod_wanderlust"
readme = "README.md"
repository = "https://github.com/PROMETHIA-27/bevy_mod_wanderlust"
version = "0.4.0"

[features]
default = ["rapier3d"]
debug_lines = []
rapier = []
rapier3d = ["rapier", "bevy_rapier3d"]
rapier2d = ["rapier", "bevy_rapier2d"]
xpbd = []
xpbd3d = ["xpbd", "bevy_xpbd_3d"]
xpbd2d = ["xpbd", "bevy_xpbd_2d"]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_render",
    "bevy_gizmos",
] }
bevy_rapier3d = { version = "0.22", default-features = false, features = [
    "debug-render",
    "async-collider",
    "dim3",
], optional = true }
bevy_rapier2d = { version = "0.22", default-features = false, features = [
    "async-collider",
    "dim2",
], optional = true }
bevy_xpbd_3d = { version = "0.2", optional = true }
bevy_xpbd_2d = { version = "0.2", optional = true }

[dev-dependencies]
bevy = "0.11"
aether_spyglass = "0.2"
bevy-inspector-egui = "0.19"
bevy_framepace = "0.13"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
#bevy_rapier3d = { path = "../bevy_rapier/bevy_rapier3d" }
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", rev = "0ea000b" }
